--- a/PankKortRekk/src/KorttiRekisteri/PaaikkunaGUIView.fxml
+++ b/PankKortRekk/src/KorttiRekisteri/PaaikkunaGUIView.fxml
@@ -16,6 +16,9 @@
          <left>
             <Pane pickOnBounds="false" prefHeight="463.0" prefWidth="720.0" BorderPane.alignment="CENTER">
                <children>
+                  <ScrollPane fx:id="panelKortti" fitToHeight="true" fitToWidth="true" layoutX="606.0" layoutY="77.0" prefHeight="349.0" prefWidth="468.0" />
+                  
+                  <ScrollPane fx:id="panelAsiakas" fitToHeight="true" fitToWidth="true" layoutX="250.0" layoutY="76.0" prefHeight="349.0" prefWidth="344.0" />
                   <TextField layoutX="14.0" layoutY="14.0" prefHeight="30.0" prefWidth="223.0" promptText="Etsi jäsenen nimi" />
                   
                   
@@ -27,9 +30,6 @@
                   <Button layoutX="626.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaDebitKortti" text="Lisää debit" />
                   <Button layoutX="747.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaLuottoKortti" text="Lisää luottokortti" />
                   <Button layoutX="900.0" layoutY="436.0" mnemonicParsing="false" onAction="#handleLisaaYhdistelmaKortti" text="Lisää yhdistelmäkortti" />
-                  
-                  <ScrollPane fx:id="panelAsiakas" layoutX="250.0" layoutY="76.0" prefHeight="349.0" prefWidth="344.0" />
-                  <ScrollPane fx:id="panelKortti" layoutX="606.0" layoutY="77.0" prefHeight="349.0" prefWidth="468.0" />
                   
                   
                   
