--- a/PankKortRekk/bin/KorttiRekisteri/MuokkaJasenGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/MuokkaJasenGUIView.fxml
@@ -1,54 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.MuokkaJasenGUIController">
-   <top>
-      <Pane prefHeight="362.0" prefWidth="378.0" BorderPane.alignment="CENTER">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.MuokkaJasenGUIController"> 
+   <bottom>
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <TextField layoutX="183.0" layoutY="32.0" prefHeight="0.0" prefWidth="150.0" />
-            <TextField layoutX="183.0" layoutY="67.0" prefHeight="0.0" prefWidth="150.0" />
-            <TextField layoutX="183.0" layoutY="102.0" prefHeight="0.0" prefWidth="150.0" />
-            <TextField layoutX="183.0" layoutY="137.0" prefHeight="0.0" prefWidth="150.0" />
-            <TextField layoutX="183.0" layoutY="172.0" prefHeight="0.0" prefWidth="150.0" />
-            <TextField layoutX="183.0" layoutY="207.0" prefHeight="0.0" prefWidth="150.0" />
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="36.0" prefHeight="18.0" prefWidth="110.0" text="Nimi">
-               <font>
-                  <Font size="14.0" />
-               </font></Label>
-            <Button layoutX="284.0" layoutY="305.0" mnemonicParsing="false" onAction="#TestiPesti" text="Tallenna" />
-            <Button fx:id="suljeNappi" layoutX="40.0" layoutY="305.0" mnemonicParsing="false" onAction="#Lopeta" text="Peruuta" />
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="71.0" prefWidth="110.0" text="Henkilötunnus">
-               <font>
-                  <Font size="14.0" />
-               </font></Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="106.0" prefWidth="110.0" text="Katuosoite">
-               <font>
-                  <Font size="14.0" />
-               </font></Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="141.0" prefWidth="110.0" text="Postinumero">
-               <font>
-                  <Font size="14.0" />
-               </font></Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="176.0" prefWidth="110.0" text="Postitoimipaikka">
-               <font>
-                  <Font size="14.0" />
-               </font></Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="211.0" prefWidth="110.0" text="Puhelinnumero">
-               <font>
-                  <Font size="14.0" />
-               </font></Label>
-            <TextField layoutX="183.0" layoutY="243.0" prefHeight="0.0" prefWidth="150.0" />
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="247.0" prefWidth="110.0" text="Sähköposti">
-               <font>
-                  <Font size="14.0" />
-               </font></Label>
+            <Label fx:id="labelVirhe" maxWidth="1000.0" />
+            <HBox />
+            <ButtonBar prefHeight="40.0" prefWidth="200.0">
+              <buttons>
+                  <Button defaultButton="true" mnemonicParsing="false" onAction="#handleOK" text="Ok" />
+                  <Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="Peruuta" />
+              </buttons>
+               <padding>
+                  <Insets right="10.0" />
+               </padding> 
+            </ButtonBar>
          </children>
-      </Pane>
-   </top>
+      </VBox>
+   </bottom>
+   <center>
+      <ScrollPane fx:id="panelAsiakas" fitToWidth="true" pannable="true" BorderPane.alignment="CENTER">
+         <content>
+            <GridPane fx:id="gridAsiakas" hgap="10.0">
+               <columnConstraints>
+                  <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" minWidth="10.0" />
+                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label text="nimi" />
+                  <Label text="hetu" GridPane.rowIndex="1" />
+                  <Label text="katuosoite" GridPane.rowIndex="2" />
+                  <Label text="postinumero" GridPane.rowIndex="3" />
+                  <Label text="postitoimipaikka" GridPane.rowIndex="4" />
+                  <Label text="puhelinnumero" GridPane.rowIndex="5" />
+                  <Label text="sähköposti" GridPane.rowIndex="6" />
+                  <TextField fx:id = "editNimi" 			text="Erik Sandren" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
+                  <TextField fx:id = "editHetu" 			text="010245-123U" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                  <TextField fx:id = "editKatuosoite" 		text="Paratiisitie 13" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+                  <TextField fx:id = "editPostinumero" 		text="40740" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
+                  <TextField fx:id = "editPostiToimipaikka" text="Helsinki" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
+                  <TextField fx:id = "editPuhelinnumero" 	text="358445566778" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+                  <TextField fx:id = "editSahkoposti" 		text="erik@feetpics.com" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
+               </children>
+               <opaqueInsets>
+                  <Insets left="10.0" top="10.0" />
+               </opaqueInsets>
+               <padding>
+                  <Insets left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </GridPane>
+         </content>
+      </ScrollPane>
+   </center>
 </BorderPane>
