--- a/PankKortRekk/bin/KorttiRekisteri/PaaikkunaGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/PaaikkunaGUIView.fxml
@@ -1,38 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import fi.jyu.mit.fxgui.ListChooser?>
+<?import fi.jyu.mit.fxgui.StringGrid?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane prefHeight="515.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.PaaikkunaGUIController">
+<BorderPane prefHeight="515.0" prefWidth="1396.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="KorttiRekisteri.PaaikkunaGUIController">
    <top>
-      <BorderPane prefHeight="488.0" prefWidth="1034.0" BorderPane.alignment="CENTER">
+      <BorderPane prefHeight="492.0" prefWidth="1185.0" BorderPane.alignment="CENTER">
          <left>
-            <Pane pickOnBounds="false" prefHeight="463.0" prefWidth="720.0" BorderPane.alignment="CENTER">
+            <Pane pickOnBounds="false" prefHeight="467.0" prefWidth="647.0" BorderPane.alignment="CENTER">
                <children>
-                  <ScrollPane fx:id="panelKortti" fitToHeight="true" fitToWidth="true" layoutX="606.0" layoutY="77.0" prefHeight="349.0" prefWidth="468.0" />
+                  <ScrollPane fx:id="panelKortti" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="77.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="724.0">
+                     <content>
+                        <StringGrid fx:id="tableDebit" editable="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" BorderPane.alignment="CENTER" />
+                     </content>
+                     </ScrollPane>
                   
-                  <ScrollPane fx:id="panelAsiakas" fitToHeight="true" fitToWidth="true" layoutX="250.0" layoutY="76.0" prefHeight="349.0" prefWidth="344.0" />
+                  <ScrollPane fx:id="panelAsiakas" fitToWidth="true" layoutX="250.0" layoutY="79.0" pannable="true" prefHeight="347.0" prefWidth="395.0" BorderPane.alignment="CENTER">
+                     <content>
+                        <GridPane fx:id="gridAsiakas" hgap="10.0" minWidth="-Infinity" prefHeight="345.0" prefWidth="391.0" style="-fx-font-size: 14px;">
+                           <columnConstraints>
+                              <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" maxWidth="5.0" minWidth="0.0" prefWidth="0.0" />
+                              <ColumnConstraints hgrow="ALWAYS" maxWidth="324.0" minWidth="10.0" prefWidth="324.0" />
+                              <ColumnConstraints hgrow="ALWAYS" maxWidth="324.0" minWidth="10.0" prefWidth="324.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label text="nimi" GridPane.columnIndex="1" />
+                              <Label text="hetu" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label text="katuosoite" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label text="postinumero" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label text="postitoimipaikka" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <Label text="puhelinnumero" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label text="sähköposti" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <TextField fx:id="editNimi" text="Erik Sandren" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" />
+                              <TextField fx:id="editHetu" text="010245-123U" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                              <TextField fx:id="editKatuosoite" text="Paratiisitie 13" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+                              <TextField fx:id="editPostinumero" text="40740" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
+                              <TextField fx:id="editPostiToimipaikka" prefHeight="30.0" prefWidth="358.0" text="Helsinki" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
+                              <TextField fx:id="editPuhelinnumero" text="358445566778" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+                              <TextField fx:id="editSahkoposti" text="erik@feetpics.com" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
+                           </children>
+                           <padding>
+                              <Insets left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </GridPane>
+                     </content>
+                  </ScrollPane>
+                  
+					<TextField layoutX="657.0" layoutY="140.0" prefHeight="25.0" prefWidth="140.0" text="Luottokortin tiedot" />
+      						<ScrollPane fx:id="panelCredit" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="166.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="724.0">
+      							<content>
+      							<StringGrid fx:id="tableCredit" editable="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" BorderPane.alignment="CENTER" />
+      							</content>
+      						</ScrollPane>
+
+					<TextField layoutX="657.0" layoutY="229.0" prefHeight="25.0" prefWidth="170.0" text="Yhdistelmäkortin tiedot" />
+						<ScrollPane fx:id="panelYhdistelma" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="255.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="724.0">
+   							<content>
+      							<StringGrid fx:id="tableYhdistelma" editable="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" BorderPane.alignment="CENTER" />
+  							 </content>
+						</ScrollPane>
+
+                  
+                  
+                  
                   <TextField layoutX="14.0" layoutY="14.0" prefHeight="30.0" prefWidth="223.0" promptText="Etsi jäsenen nimi" />
                   
-                  
-                  <ListChooser fx:id="chooserAsiakkaat" layoutX="14.0" layoutY="76.0" prefHeight="349.0" prefWidth="224.0" />
+                        
+                  <ListChooser fx:id="chooserAsiakkaat" layoutX="14.0" layoutY="77.0" prefHeight="349.0" prefWidth="224.0" />
                   <TextField layoutX="14.0" layoutY="51.0" text="Jäsenlista" />
                   <TextField layoutX="250.0" layoutY="51.0" text="Jäsenen tiedot" />
-                  <TextField layoutX="606.0" layoutY="51.0" text="Kortin tiedot" />
+                  <TextField layoutX="657.0" layoutY="51.0" prefHeight="25.0" prefWidth="114.0" text="Debit kortin tiedot" />
                   <Button layoutX="74.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaAsiakas" text="Uusi Asiakas" />
-                  <Button layoutX="626.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaDebitKortti" text="Lisää debit" />
-                  <Button layoutX="747.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaLuottoKortti" text="Lisää luottokortti" />
-                  <Button layoutX="900.0" layoutY="436.0" mnemonicParsing="false" onAction="#handleLisaaYhdistelmaKortti" text="Lisää yhdistelmäkortti" />
-                  
-                  
-                  
+                  <Button layoutX="250.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaDebitKortti" text="Lisää debit" />
+                  <Button layoutX="380.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaLuottoKortti" text="Lisää luottokortti" />
+                  <Button layoutX="514.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaYhdistelmaKortti" text="Lisää yhdistelmäkortti" />
                </children>
             </Pane>
          </left>
@@ -55,6 +123,7 @@
                         <MenuItem mnemonicParsing="false" onAction="#handlePoistaPankkiKorttiVali" text="Poista pankkikortti" />
                   </items>
                 </Menu>
+                
                 <Menu mnemonicParsing="false" text="APUA">
                   <items>
                     <MenuItem mnemonicParsing="false" onAction="#Apua" text="Apua" />
